# ai-commit

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_commit/: __init__.py  cli.py  config.py  git.py  llm.py
ai_commit.egg-info/: PKG-INFO  SOURCES.txt
